# quakespasm-spiked

./: CMakeLists.txt
.github/workflows/: build-linux.yml  build-windows.yml
MacOSX/: build-macos.sh  setup-vcpkg.sh
Quake/: pr_cmds.c
Windows/VisualStudio/: quakespasm-sdl2.vcproj
